@@ -1,3 +1,13 @@
+Sat Sep 01 06:49:49 2001  George Lebl <jirka@5z.com>
+
+	* gnome-program.c: Init modules passed to gnome_program_init on
+	  the second (non-global) invocation as well.  Found out bonobo is
+	  calling this and that's very wrong BTW.  gnome_program_init should
+	  be only called by the program itself in it's main.  Also don't
+	  load shlib modules if we're setgid or setuid.  Take the
+	  "--load-modules modules" form of argument.  Use the type in the
+	  init to create the program.
+
 Sat Sep 01 02:40:35 2001  George Lebl <jirka@5z.com>
 
 	* gnome-config.c: kill weird include for strndup, this is in glib
